# thtk

./: .editorconfig  .gitignore  .gitmodules  .hgignore  .hgtags  CMakeLists.txt  CNAME  COPYING  COPYING.autotools  COPYING.bison  COPYING.libpng  COPYING.zlib  INSTALL  Makefile.am  NEWS  README  args.c  args.h  bits.c  bits.h  config.h.in  configure.ac  datpacker-th02.c  datpacker-th06.c  datpacker-th08.c  datpacker-th75.c  datpacker-th95.c  datpacker.c  datpacker.h  ecl.h  ecldump.c  ecsparse.y  ecsscan.l  expr.c  file.c  file.h  image.c  image.h  index.html  instr.c  (+41 more)
.github/workflows/: build.yml
cmake/: CheckStructPacking.c.in  CheckStructPacking.cmake
contrib/: CMakeLists.txt  README  anmtest.sh  datsums.txt  eclmapcvt.awk  thtkdllwrapper.cc  thtkpp.hh  uthdat.cc  wcthdat.cc  wcthdat.def  wcxhead.h
extlib/: CMakeLists.txt
m4/: thtk_check_padding.m4  thtk_try_cflags.m4
master/: thanm.1.html  thanm.old.1.html  thdat.1.html  thecl.1.html  thmsg.1.html  thstd.1.html
thanm/: CMakeLists.txt  anmmap.c  anmmap.h  anmparse.y  anmscan.l  expr.c  expr.h  image.c  image.h  reg.c  reg.h  thanm.1  thanm.c  thanm.h
thanm.old/: CMakeLists.txt  anm_types.h  image.c  image.h  thanm.c  thanm.h  thanm.old.1
thdat/: CMakeLists.txt  thdat.1  thdat.c
thecl/: CMakeLists.txt  eclmap.c  eclmap.h  ecsparse.y  ecsscan.l  expr.c  expr.h  path.c  path.h  seqmap.c  seqmap.h  thecl.1  thecl.c  thecl.h  thecl06.c  thecl10.c  thtk_expr.dot
thmsg/: CMakeLists.txt  thmsg.1  thmsg.c  thmsg06.c  thmsg95.c
thstd/: CMakeLists.txt  thstd.1  thstd.c  thstd.h
thtk/: CMakeLists.txt  Makefile.am  bits.c  bits.h  dat.h  dattypes.h  detect.c  detect.h  error.c  error.h  io.c  io.h  match.c  rng_mt.c  rng_mt.h  thcrypt.c  thcrypt.h  thcrypt105.c  thcrypt105.h  thdat.c  thdat.h  thdat02.c  thdat06.c  thdat08.c  thdat105.c  thdat75.c  thdat95.c  thlzss.c  thlzss.h  thrle.c  thrle.h  thtk.h  thtk.pc.in  util.c  util.h
thtk-12/: thanm.1.html  thdat.1.html  thecl.1.html  thmsg.1.html  thstd.1.html
util/: CMakeLists.txt  cp932.c  cp932.h  cp932tab.h  file.c  file.h  list.c  list.h  mygetopt.c  mygetopt.h  path.c  path.h  program.c  program.h  seqmap.c  seqmap.h  util.c  util.h  value.c  value.h
