include_directories(${CMAKE_SOURCE_DIR})
if(CONTRIB_UTHDAT)
  add_executable(uthdat uthdat.cc thtkpp.hh)
  target_link_libraries(uthdat thtk)
  install(TARGETS uthdat DESTINATION lib/mc/extfs.d)
endif()
if(CONTRIB_WCTHDAT)
  add_library(wcthdat SHARED wcthdat.cc wcthdat.def wcxhead.h thtkpp.hh thtkdllwrapper.cc)
  target_link_libraries(wcthdat)
endif()
