include_directories(${CMAKE_SOURCE_DIR})
add_executable(thdat thdat.c)
target_compile_options(thdat PRIVATE ${THTK_WARNING_FLAGS})
if (WITH_OPENMP)
  find_package(OpenMP)
  if (OPENMP_FOUND)
    target_compile_options(thdat PRIVATE "${OpenMP_C_FLAGS}")
    target_link_libraries(thdat "${OpenMP_C_LIBRARIES}")
  endif()
endif()
target_link_libraries(thdat thtk util)
link_setargv(thdat)
install(TARGETS thdat DESTINATION bin)
install(FILES thdat.1 DESTINATION share/man/man1)
