include_directories(${CMAKE_SOURCE_DIR})
add_executable(thdat thdat.c)
if (WITH_OPENMP)
  find_package(OpenMP)
  if (OPENMP_FOUND)
    target_compile_options(thdat PRIVATE "${OpenMP_C_FLAGS}")
    target_link_libraries(thdat PRIVATE "${OpenMP_C_LIBRARIES}")
  endif()
endif()
target_link_libraries(thdat PRIVATE thtk util setargv thtk_warning)
install(TARGETS thdat DESTINATION bin)
install(FILES thdat.1 DESTINATION share/man/man1)
